--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -5,9 +5,14 @@
   padding: 20px;
   margin: 20px;
 
+  input[type=text] {
+    width: 100%;
+  }
+
   textarea {
     display: block;
     margin: auto;
     width: 100%;
+    height: 100px;
   }
 }
