simple Header component and a lot of styling

--- a/src/components/Display/Display.css
+++ b/src/components/Display/Display.css
@@ -1,7 +1,7 @@
 .Display {
-  background-color: darkblue;
+  background-color: #27496d;
+  border-radius: 10px;
   color: white;
   padding: 20px;
-  margin: 20px;
- 
+  margin-top: 20px;
 }
