--- a/src/containers/FormControl.css
+++ b/src/containers/FormControl.css
@@ -7,14 +7,16 @@
   display: flex;
   flex-direction: column;
   justify-content: left;
-  background-color: darkgreen;
+  background-color: #142850;
   width: 25%;
+  margin: 20px 20px 20px 0px;
 }
 
 .right {
   display: flex;
   flex-direction: column;
   justify-content: right;
-  background-color: red;
+  background-color: #142850;
   width: 75%;
+  margin: 20px 0px 20px 20px;
 }
