--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -3,7 +3,7 @@
   border-radius: 10px;
   font-family: sans-serif;
   color: #dae1e7;
-  padding: 20px;
+  padding: 20px 20px 20px 20px;
 
   input[type=text] {
     font-size: 15px;
@@ -20,7 +20,7 @@
     display: block;
     margin: auto;
     width: 100%;
-    height: 100px;
+    height: 150px;
   }
 
   textarea:disabled {
@@ -36,5 +36,77 @@
     text-align: center;
     margin-top: 15px;
   }
+}
 
+.formLeft {
+  width: 55%;
+  float: left;
+  padding: 40px 20px 40px 20px;
+  align-items: center;
+  
+}
+
+.formRight {
+  width: 45%;
+  float: left;
+  padding: 0px 20px 0px 20px;
+  text-align: center;
+
+  h3 {
+    margin-block-start: .5em;
+    margin-block-end: .5em;
+  }
+
+  button {
+    background-color: #142850;
+    color: #dae1e7;
+    font-size: 15px;
+    width: 100%;
+    height: 30px;
+    text-align: center;
+    margin-top: 2px;
+    margin-bottom: 10px;
+  }
+}
+
+.authDiv {
+  background-color: #142850;
+  border-radius: 10px;
+  padding: 10px;
+  margin: 10px;
+
+  input[type=text] {
+    font-size: 12px;
+    margin: 10px;
+    margin-bottom: 10px;
+    width: 25%;
+  }
+}
+
+.tokenDiv {
+  background-color: #142850;
+  border-radius: 10px;
+  padding: 10px;
+  margin: 10px;
+
+  input[type=text] {
+    font-size: 12px;
+    margin: 10px;
+    margin-bottom: 10px;
+    width: 85%;
+  }
+}
+
+.extraDiv {
+  background-color: #142850;
+  border-radius: 10px;
+  padding: 10px;
+  margin: 10px;
+
+  input[type=text] {
+    font-size: 12px;
+    margin: 10px;
+    margin-bottom: 10px;
+    width: 85%;
+  }
 }
